Configured goreleaser to use its own Dockerfile.release

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,6 +24,7 @@ dockers:
   - image_templates:
       - "itzg/{{.ProjectName}}:latest"
       - "itzg/{{.ProjectName}}:{{ .Tag }}"
+    dockerfile: Dockerfile.release
 checksum:
   name_template: 'checksums.txt'
 snapshot:
