--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           go-version: 1.17
 
+      - name: Run tests
+        run: |
+          go test ./...
+
       - name: Setup docker buildx
         uses: docker/setup-buildx-action@v1
         with:
