--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   test:
@@ -17,30 +20,6 @@ jobs:
         with:
           go-version: '1.17'
 
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
       - name: Run tests
         run: |
           go test ./...
-
-      - name: Gather Docker metadata
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: |
-            itzg/saml-auth-proxy
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Push
-        uses: docker/build-push-action@v2.7.0
-        with:
-          tags: ${{ steps.meta.outputs.tags }}
-          pull: true
-          push: true
-          labels: ${{ steps.meta.outputs.labels }}
