--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,30 @@ services:
     environment:
       GF_SECURITY_ADMIN_PASSWORD: notsecret
       GF_AUTH_PROXY_ENABLED: "true"
-      GF_AUTH_PROXY_HEADER_NAME: X-WEBAUTH-USER
+      GF_AUTH_PROXY_HEADER_NAME: X-WEBAUTH-EMAIL
     volumes:
       - grafana:/var/lib/grafana
   web-debug-server:
     image: itzg/web-debug-server:1.2.3
     ports:
       - "8081:8080"
+  saml-auth-proxy:
+    # image: itzg/saml-auth-proxy
+    build: .
+    environment:
+      SAML_PROXY_BASE_URL: http://localhost:8080
+      SAML_PROXY_BACKEND_URL: http://grafana:3000
+      SAML_PROXY_IDP_METADATA_URL: https://samltest.id/saml/idp
+      SAML_PROXY_ATTRIBUTE_HEADER_MAPPINGS: mail=x-webauth-email
+      SAML_PROXY_AUTHORIZE_ATTRIBUTE: mail
+      SAML_PROXY_AUTHORIZE_VALUES: rsanchez@samltest.id,msmith@samltest.id
+      SAML_PROXY_SP_CERT_PATH: /app/certs/saml-auth-proxy.cert
+      SAML_PROXY_SP_KEY_PATH: /app/certs/saml-auth-proxy.key
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./certs:/app/certs
+    
 
 volumes:
   grafana: {}
