move attribute mapping to grafana config

--- a/data/grafana-saml-config.json
+++ b/data/grafana-saml-config.json
@@ -1,5 +1,8 @@
 {
   "samlGroupAttributeName": "mail",
+  "attributeHeaderMapping": {
+    "mail": "x-webauth-email"
+  },
   "organizations": {
     "1": {
       "groupToRole": {
