--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           go test ./...
 
-      - name: Run GoReleaser
+      - name: Check GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
           version: latest
