--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,22 +10,4 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "1.20"
-
-      - name: Run tests
-        run: |
-          go test ./...
-
-      - name: Check GoReleaser
-        uses: goreleaser/goreleaser-action@v5
-        with:
-          version: latest
-          args: check
+    uses: itzg/github-workflows/.github/workflows/go-test.yml@main
